--- a/MKart/EMart.ipynb
+++ b/MKart/EMart.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "49190a39",
    "metadata": {},
    "outputs": [],
@@ -291,26 +291,28 @@
     "            err_msg= \"invalid input\"\n",
     "            bool_flag=False\n",
     "        if(bool_flag):\n",
-    "            path=success_file_path+\"\\\\\"+str(dt.today())+str(product_id)+str(order_id)+\".csv\"\n",
-    "            if not os.path.exists(path):\n",
+    "            folder_path=success_file_path+\"\\\\\"+order_date\n",
+    "            file_path=success_file_path+\"\\\\\"+order_date+\"\\\\\"+str(product_id)+str(order_id)+\".csv\"\n",
+    "            if not os.path.exists(folder_path):\n",
     "                try:\n",
-    "                    os.makedirs(path,mode=0o777,exist_ok=True)   \n",
+    "                    os.makedirs(folder_path,mode=0o777,exist_ok=True)   \n",
     "                except PermissionError as e:\n",
     "                    print(f\"Permission error: {e}\")\n",
     "                except Exception as e:\n",
     "                    print(f\"An error occurred: {e}\")\n",
-    "            with open(path,mode='w') as f:\n",
+    "            with open(file_path,mode='w') as f:\n",
     "                f.write(file_list[j])\n",
     "        else:\n",
-    "            path=rejected_file_path+\"\\\\\"+str(dt.today())+str(product_id)+str(order_id)+\".csv\"\n",
-    "            if not os.path.exists(path):\n",
+    "            folder_path=rejected_file_path+\"\\\\\"+order_date\n",
+    "            file_path=rejected_file_path+\"\\\\\"+order_date+\"\\\\\"+str(product_id)+str(order_id)+\".csv\"\n",
+    "            if not os.path.exists(folder_path):\n",
     "                try:\n",
-    "                    os.makedirs(path,mode=0o777,exist_ok=True)\n",
+    "                    os.makedirs(folder_path,mode=0o777,exist_ok=True)\n",
     "                except PermissionError as e:\n",
     "                    print(f\"Permission error: {e}\")\n",
     "                except Exception as e:\n",
     "                    print(f\"An error occurred: {e}\")                \n",
-    "            with open(path,mode='w') as f:\n",
+    "            with open(file_path,mode='w') as f:\n",
     "                f.write(file_list[j]+err_msg)\n",
     "            \n",
     "        "
@@ -318,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "83ea75de",
    "metadata": {},
    "outputs": [
@@ -326,20 +328,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-01-01\n"
-     ]
-    },
-    {
-     "ename": "PermissionError",
-     "evalue": "[Errno 13] Permission denied: 'D:\\\\NamasteSql\\\\NamasteKart\\\\success_files\\\\2024-01-29\\\\1001.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[26], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m validate_input(file_list)\n",
-      "Cell \u001b[1;32mIn[25], line 36\u001b[0m, in \u001b[0;36mvalidate_input\u001b[1;34m(file_list)\u001b[0m\n\u001b[0;32m     34\u001b[0m         \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m     35\u001b[0m             \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAn error occurred: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 36\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path,mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m     37\u001b[0m         f\u001b[38;5;241m.\u001b[39mwrite(file_list[j])\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:286\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    279\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    280\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    281\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    282\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    283\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    284\u001b[0m     )\n\u001b[1;32m--> 286\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mPermissionError\u001b[0m: [Errno 13] Permission denied: 'D:\\\\NamasteSql\\\\NamasteKart\\\\success_files\\\\2024-01-29\\\\1001.csv'"
+      "2024-01-01\n",
+      "2024-02-01\n",
+      "2024-01-03\n",
+      "2024-01-04\n"
      ]
     }
    ],
